force-app/main/default/objects/Conversion_Data__c/Conversion_Data__c.object-meta.xml
<CustomObject>
    <label>Conversion Data</label>
    <nameField>
        <displayFormat>CD-{0000000}</displayFormat>
        <label>Conversion Data No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>