force-app/main/default/objects/Conversion_Data__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - On-Road Passenger &amp; Light Truck</fullName>
            </value>
            <value>
                <fullName>2_Medium_truck</fullName>
                <label>2 - On-Road Medium Truck</label>
            </value>
            <value>
                <fullName>3_Off_road</fullName>
                <label>3 - Off-Road Pneumatic</label>
            </value>
            <value>
                <fullName>4_Off_road</fullName>
                <label>4 - Off-Road Pneumatic</label>
            </value>
            <value>
                <fullName>5_Off_road</fullName>
                <label>5 - Off-Road Pneumatic</label>
            </value>
            <value>
                <fullName>6_Off_road_or_Agricultural</fullName>
                <label>6 - Off-Road Pneumatic / Agricultural</label>
            </value>
            <value>
                <fullName>7_Off_road</fullName>
                <label>7 - Off-Road Pneumatic</label>
            </value>
            <value>
                <fullName>8 - Off-Road Pneumatic / Agricultural</fullName>
            </value>
            <value>
                <fullName>9_Off_road</fullName>
                <label>9 - Off-Road Pneumatic</label>
            </value>
            <value>
                <fullName>10_Off_road</fullName>
                <label>10 - Off-Road Pneumatic</label>
            </value>
            <value>
                <fullName>11_Off_road</fullName>
                <label>11 - Off-Road Pneumatic</label>
            </value>
            <value>
                <fullName>12_Off_road</fullName>
                <label>12 - Off-Road Solid &amp; Resilient</label>
            </value>
            <value>
                <fullName>13_Off_road</fullName>
                <label>13 - Off-Road Solid &amp; Resilient</label>
            </value>
            <value>
                <fullName>14_Off_road</fullName>
                <label>14 - Off-Road Solid &amp; Resilient</label>
            </value>
            <value>
                <fullName>15_Off_road</fullName>
                <label>15 - Off-Road Solid &amp; Resilient</label>
            </value>
            <value>
                <fullName>16_Off_road</fullName>
                <label>16 - Off-Road Solid &amp; Resilient</label>
            </value>
            <value>
                <fullName>17_Off_road</fullName>
                <label>17 - Off-Road Solid &amp; Resilient</label>
            </value>
            <value>
                <fullName>18_Off_road</fullName>
                <label>18 - Off-Road Solid &amp; Resilient</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>