force-app/main/default/objects/Conversion_Data__c/fields/Conversion_Factor_Unit_to_Weight__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor_Unit_to_Weight__c</fullName>
    <label>Conversion Factor</label>
    <precision>13</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>