force-app/main/default/objects/Conversion_Data__c/fields/Conversion_Summary__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Summary__c</fullName>
    <label>Conversion Summary</label>
    <referenceTo>Conversion_Summary__c</referenceTo>
    <relationshipLabel>Conversion Data</relationshipLabel>
    <relationshipName>Conversion_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>