force-app/main/default/objects/Conversion_Data__c/fields/Master_Category__c.field-meta.xml
<CustomField>
    <fullName>Master_Category__c</fullName>
    <label>Parent Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger / Light Truck Tires</fullName>
            </value>
            <value>
                <fullName>Medium Truck Tires</fullName>
            </value>
            <value>
                <fullName>Off-Road Tires (Except Large)</fullName>
            </value>
            <value>
                <fullName>Large Tires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>