force-app/main/default/objects/Conversion_Data__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Weight</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>