force-app/main/default/objects/Conversion_Data__c/fields/Registration_Detail__c.field-meta.xml
<CustomField>
    <fullName>Registration_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Detail</label>
    <referenceTo>Registration_Detail__c</referenceTo>
    <relationshipLabel>Conversion Data</relationshipLabel>
    <relationshipName>Conversion_Data</relationshipName>
    <type>Lookup</type>
</CustomField>