force-app/main/default/objects/Conversion_Data__c/fields/Weight_Range__c.field-meta.xml
<CustomField>
    <fullName>Weight_Range__c</fullName>
    <label>Weight Range</label>
    <length>200</length>
    <type>Text</type>
</CustomField>